--- a/posts/misc/gke-autopilot-walkthrough/index.qmd
+++ b/posts/misc/gke-autopilot-walkthrough/index.qmd
@@ -29,11 +29,19 @@ Here we work through Google's interactive GKE[^GKE] Autopilot Walkthrough [tutor
 
 [^GKE]: Google Kubernetes Engine
 
+## Intro
+
+Learning a new technology can sometimes be daunting ... especially when it involves cloud, network engineering, & the Internet. There are loads of [Kubernetes](https://www.youtube.com/watch?v=BE77h7dmoQU) resources/tutorials on the internet, & it's been around for over a decade, so why another one? This is for documenting my experience. I've kind of always seen this tool as the thing for cloud engineers to handle to scale services in production. 
+
+That's still true today. Recently, I've discovered that quite a few geospatial data science teams are using Kubernetes to scale their satellite imagery data pipelines. With my experience handling geospatial data, I hope to grow my skillset in cloud engineering with handling satellite imagery pipelines at scale. 
+
+Fundamentals first -> so lets go! 🌏 💾 🚢 📦
+
 ## Resources
 
 - [GKE Modes of Operation](https://cloud.google.com/kubernetes-engine/docs/concepts/choose-cluster-mode)
 - [Kubernetes Engine -> Create an Autopilot cluser](https://console.cloud.google.com/kubernetes/auto/add)
-
+- [Resource Management for Pods and Containers](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/)
 
 ## About GKE Modes of Operation
 
@@ -191,7 +199,7 @@ The walkthrough on <https://console.cloud.google.com> has you use the Google Clo
 
 However, Kubernetes was designed to be able to do this remotely, so we will use the `kubectl` CLI in our local dev environment. With API access/auth & config setup, these steps can be done in either your local dev setup or within the Google Cloud Console. 
 
-Additionally, VS Code's Kuberenetes extension allows us to monitor our cluster. We'll show what that looks like as well.
+Additionally, VS Code's [Kuberenetes extension](https://marketplace.visualstudio.com/items?itemName=ms-kubernetes-tools.vscode-kubernetes-tools#overview) allows us to monitor our cluster. We'll show what that looks like as well.
 
 ### Deploying Application to Cluster
 
@@ -296,11 +304,15 @@ Additionally, we can access this IP in the Google Cloud console under:
 
 Kubernetes was designed to **scale** container applications. Here we will explore doing so with the Autopilot cluster to demo some of its capabilities. 
 
+Useful resources:
+
+- [Resource Management for Pods and Containers](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/)
+
 ### Apply Changes to Deployment in Autopilot Cluster
 
 Either through the `kubectl` CLI, Cloud Shell, or using VS Code, we can apply a change to our deployment. 
 
-Here we choose to change the CPU requests of the frontend Deployment from 100m to 650m. 
+Here we choose to change the frontend Deployment's CPU resource **requests** from 100m to 650m (millicpus/millicores). 
 
 In this demonstration, we will see how the Autopilot cluster adjusts our resoures to properly fit the updated CPU requests value. When we suppply a Pod without or with values that stretch the constraints, Autopilot adjusts them to fit automatically.
 
@@ -308,17 +320,22 @@ To grab our frontend Pod's configuration, in the Kubernetes VS Code extension, w
 
 - `Workloads -> Deployments -> frontend`
 
+<br>
 We can also describe the frontend service's running Pod by opening the Deployment & clicking on "Describe".
 
-Under "Pod Template" -> "Containers" -> "Limits"/"Requests", we see that our CPU limits are set to 200m/100m/ respectively.
+Under "Pod Template" -> "Containers" -> "Limits"/"Requests", we see that our CPU limits are set to `200m`/`100m` respectively.
 
 We will see how we can change 1 of these values & Autopilot will handle the rest. We will do this by increasing the CPU request value in `spec.template.spec.containers.resources` from `100m` to `650m`.
 
+<br>
 Navigate to this value in the deployment-frontend Pod's yaml config that you just opened by clicking on the Workload in the kubernetes extensions. Change the `spec.template.spec.containers.resources.requests.cpu` value from `100m` to `650m`. Then, open command pallete with `CMD+shift+P` & use `Kubernetes: Apply`.
 
 This opens a Kuberenetes diff, & then VS Code will ask you to apply the changes in a notification. Click "Apply" to deploy the changes. 
 
-Next, we can describe the Pod again to see how Autopilot applied the changes. We see that our frontend container "Limits" CPU value got changed from `200m` to also `650m` to account our Requests change. Additionally, Limits/Requests memory values were updated from `128Mi/100Mi` to both `666Mi`. 
+This is the equivalent of running `kubectl apply` on the YAML frontend deployment that you are directly editing.  
+
+<br>
+Next, we can describe the Pod again to see how Autopilot applied the changes. We see that our frontend container "Limits" CPU value got changed from `200m` to also `650m` to account for our Requests change. Additionally, Limits/Requests memory values were updated from `128Mi/103Mi` to both `666Mi`. 
 
 ### Scaling a Workload
 
