Site overhaul: header updates, add project header menu, add project euler listing, theme/style updates

--- a/LICENSE.qmd
+++ b/LICENSE.qmd
@@ -6,6 +6,7 @@ format:
         <script src='/assets/js/site.js'></script>
         <script src='/assets/js/non-posts.js'></script>
     css: [/assets/css/non-posts.css]
+sidebard: false
 ---
 
 # Creative Commons License
