--- a/SETUP.qmd
+++ b/SETUP.qmd
@@ -1,12 +1,13 @@
 ---
-format:
-  html:
-    code-fold: false
-    include-after-body:
-      text: |
-        <script src='/assets/js/site.js'></script>
-        <script src='/assets/js/non-posts.js'></script>
-    css: [/assets/css/non-posts.css]
+code-fold: false
+include-after-body:
+  text: |
+    <div id="scroll-padding"></div>
+    <script src='/assets/js/site.js'></script>
+    <script src='/assets/js/non-posts.js'></script>
+    <script src='/assets/js/sourceCode.js'></script>
+css: [/assets/css/non-posts.css]
+sidebard: false
 ---
 
 # Quarto Site Environment Setup 
