--- a/euler/problem/0003.qmd
+++ b/euler/problem/0003.qmd
@@ -10,6 +10,8 @@ link: <https://projecteuler.net/problem=3>{.link-euler}
 #| file: euler/utils/setup.R
 ```
 
+![Ella, Sri Lanka - Black Bridge overlooking the top of Kuda Ravana waterfall - April 29th, 2025](../assets/img/DJI_20250429081018_0767_D.jpg)
+
 The prime factors of $13195$ are $5, 7, 13$ and $29$. 
 <br>
 What is the largest prime factor of the number $600851475143$?
