--- a/euler/problem/0002.qmd
+++ b/euler/problem/0002.qmd
@@ -3,6 +3,7 @@ title: Problem 2 -	Even Fibonacci Numbers
 date: 01/15/26
 draft: false
 link: <https://projecteuler.net/problem=2>{.link-euler}
+image: ../assets/img/DJI_20250426083343_0654_D.jpg
 ---
 
 ```{r}
