--- a/euler/problem/0001.qmd
+++ b/euler/problem/0001.qmd
@@ -3,6 +3,7 @@ title: Problem 1 - Multiples of 3 or 5
 date: 01/15/26
 draft: false
 link: <https://projecteuler.net/problem=1>{.link-euler}
+image: ../assets/img/DJI_20250426080623_0634_D.jpg
 ---
 
 ```{r}
