--- a/euler/problem/0003.qmd
+++ b/euler/problem/0003.qmd
@@ -3,6 +3,7 @@ title: Problem 3 - Largest Prime Factor
 date: 01/15/26
 draft: false
 link: <https://projecteuler.net/problem=3>{.link-euler}
+image: ../assets/img/DJI_20250429081018_0767_D.jpg
 ---
 
 ```{r}
