--- a/euler/problem/0005.qmd
+++ b/euler/problem/0005.qmd
@@ -4,6 +4,7 @@ date: 01/17/26
 draft: false
 link: <https://projecteuler.net/problem=5>{.link-euler}
 image: ../assets/img/DJI_20250430211849_0811_D.jpg
+css: [/assets/css/tables-left-aligned.css]
 ---
 
 ```{r}
