fix page titles in config & pandoc template at .quarto-cli/quarto-x/share/formats/html/pandoc/metadata.html

--- a/about/index.qmd
+++ b/about/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "{{< fa earth-americas >}} Vincent Clemson {{< fa earth-europe >}}"
-pagetitle: 'About - Vincent Clemson'
+pagetitle: 'About'
 image: profile.jpg
 about:
   template: trestles
