--- a/euler/problem/0003.qmd
+++ b/euler/problem/0003.qmd
@@ -3,7 +3,8 @@ title: Problem 3 - Largest Prime Factor
 date: 01/15/26
 draft: false
 link: <https://projecteuler.net/problem=3>{.link-euler}
-image: ../assets/img/DJI_20250429081018_0767_D.jpg
+image: ../assets/img/DJI_20250502212800_0890_D.jpg
+categories: [primes, factors, divisors, remainder]
 ---
 
 ```{r}
@@ -11,7 +12,11 @@ image: ../assets/img/DJI_20250429081018_0767_D.jpg
 #| file: euler/utils/setup.R
 ```
 
-![Ella, Sri Lanka - Black Bridge overlooking the top of Kuda Ravana waterfall - April 29th, 2025](../assets/img/DJI_20250429081018_0767_D.jpg)
+![
+  Aerial view overlooking entry road & Sigiriya Fortress - Lion Rock
+  <br>
+  Sigiriya, Sri Lanka - May 5th, 2025
+](../assets/img/DJI_20250502212800_0890_D.jpg)
 
 The prime factors of $13195$ are $5, 7, 13$ and $29$. 
 <br>
