--- a/euler/problem/0005.qmd
+++ b/euler/problem/0005.qmd
@@ -4,6 +4,7 @@ date: 01/17/26
 draft: false
 link: <https://projecteuler.net/problem=5>{.link-euler}
 image: ../assets/img/DJI_20250430211849_0811_D.jpg
+categories: ["least common multiple", "primes", "prime factorization", "factors", "multiples"]
 css: [/assets/css/tables-left-aligned.css]
 ---
 
@@ -20,7 +21,7 @@ What is the smallest positive number that is evenly divisible by all of the numb
 
 {{< meta link >}}
 
-### Development
+## Development
 
 To start out, we write a simple program to test numbers from 1 to 11, 1 to 12, and so forth to test runtime feasibility.
 
