project config & publishing Euler problems 1-10:
- publish Euler problem 10
- convert Euler p1-10 to python
- styling update - hover on categories in posts
- add {reticulate} to environment & configure python executable in
  .Rprofile
- RStudio project name change

--- a/euler/index.qmd
+++ b/euler/index.qmd
@@ -17,7 +17,7 @@ listing:
     title: Project Euler
     type: partial
     items: 100
-  sort: title
+  sort: filename
   fields: [image, date, title, subtitle, description, file-modified]
   field-display-names:
     date: "Published"
