--- a/euler/problem/0001.qmd
+++ b/euler/problem/0001.qmd
@@ -5,6 +5,7 @@ draft: false
 link: <https://projecteuler.net/problem=1>{.link-euler}
 image: ../assets/img/DJI_20250426080623_0634_D.jpg
 categories: [multiples, divisors, remainder]
+
 ---
 
 ```{r}
@@ -59,3 +60,20 @@ sum(x[x %% 5 == 0 | x %% 3 == 0])
 ```
 
 ## Python
+
+### Answer 1
+
+```{python}
+x = []
+for i in range(1, 1000):
+  if (i % 3 == 0) or (i % 5 == 0):
+    x.append(i)
+sum(x)
+```
+
+### Answer 2
+
+```{python}
+x = [i for i in range(1, 1000) if (i % 3 == 0) or (i % 5 == 0)]
+sum(x)
+```
