--- a/euler/problem/0002.qmd
+++ b/euler/problem/0002.qmd
@@ -39,3 +39,10 @@ sum(y[y %% 2 == 0])
 ## Python
 
 ### Answer 1
+
+```{python}
+x = [1,2]
+while x[-1] < 4e6:
+  x.append(sum(x[-2:]))
+sum([i for i in x if i % 2 == 0])
+```
