--- a/euler/problem/0007.qmd
+++ b/euler/problem/0007.qmd
@@ -32,9 +32,11 @@ The Sieve of Eratosthenes is important here. Resource:
 
 It is said that $n * ln(n)$ is a good ***estimate*** of the $n$^th^ prime.
 
-Thus, we implement the logic below as a crude implementation of the sieve where we pre-generate values, setting our upper bound to $2 * n * ln(n)$ where $n$ is the $n$^th^ prime.
+Thus, we implement the logic below as a crude implementation of the sieve where we pre-generate a sequence of values: setting our lower bound to 2, and our upper bound to $2 * n * ln(n)$ where $n$ is the $n$^th^ prime.
 
-In the sieve, we eliminate each prime incrementally from the pre-generated set until we reach the $n$^th^ prime. We do this by checking divisibility by the lowest prime of 2, then 3, 5, 7, etc.
+In the sieve, we eliminate values incremntally from the pre-generated set by conducting remainder division to reach the next prime until we reach the $n$^th^ prime. This pattern allows us to conduct divisibility by the lowest prime of 2, then 3, 5, 7, etc., & we do not even need to check for primeness. 
+
+The sieve is pretty neat!
 
 ## R
 
@@ -62,9 +64,9 @@ toc()
 ### Answer 2
 
 ```{r}
+tic()
 primes::nth_prime(10001)
+toc()
 ```
 
-## Python
-
-### Answer 1
+{{< include _0007.qmd >}}
