--- a/euler/problem/0009.qmd
+++ b/euler/problem/0009.qmd
@@ -1,6 +1,6 @@
 ---
 title: Problem 9 - Special Pythagorean Triplet
-date: 01/21/26
+date: January 21, 2026
 draft: false
 link: <https://projecteuler.net/problem=9>{.link-euler}
 image: ../assets/img/DJI_20250429081028_0768_D.jpg
@@ -32,12 +32,11 @@ Find the product $abc$.
 
 We can brute force this problem by trying every combination of $a, b, c$ since there is exactly one triplet.
 
-### Answer 1
+### Answer 1 - Brute Force
 
 ```{r}
 #| cache: true
 brute <- function(p) {
-  p <- 1000
   for (i in 1:p) {
     for (j in 1:p) {
       for (k in 1:p) {
@@ -60,7 +59,6 @@ Repetitive assignments are very, very, slow in R ... below is 8 times faster.
 ```{r}
 #| cache: true
 brute2 <- function(p) {
-  p <- 1000
   for (i in 1:p) {
     for (j in 1:p) {
       for (k in 1:p) {
@@ -96,7 +94,6 @@ We can use these bounds on $b$ & $c$ to search for the answer faster than the br
 ```{r}
 #| cache: true
 bounds <- function(p) {
-  p <- 1000
   for (i in 1:p) {
     for (j in i:floor((p - i)/2)) {
       for (k in floor((p - i)/2):p) {
@@ -153,7 +150,7 @@ So $$16 \leq m \leq 22$$
 
 #### No Code
 
-We have enough information here to try a few combinations to find our answer. 
+We have enough information here to try a few combinations to find our answer.
 
 Since $\frac{P - 2m^2}{2m} = n; \: \frac{500 - m^2}{m} = n$ & $n$ must be an integer, the only value of $m$ for $16 \leq m \leq 22$ is $m=20$ where $n = \frac{1000-2*20^2}{2*20} = (2*20)*\frac{25-20}{2*20} = 25 - 20 = 5$
 
@@ -185,6 +182,4 @@ l
 unlist(l) |> prod()
 ```
 
-## Python
-
-### Answer 1
+{{< include _0009.qmd >}}
